# luaExec

./: .gitignore  CMakeLists.txt  README.md  build_bytecode.sh  docs.md  download_lua.bat  download_lua.sh  source.lua
src/: bytecode.h  main.cpp
src/crypt/: base64.cpp  base64.h  hwid.cpp  hwid.h  rand.cpp  rand.h
src/fs/: fs.cpp  fs.h
src/utils/: getEnviron.cpp  getEnviron.h  messageBox.cpp  messageBox.h
